--- a/src/components/FilmInfoPopup/FilmInfoPopup.css
+++ b/src/components/FilmInfoPopup/FilmInfoPopup.css
@@ -18,8 +18,11 @@
   opacity: 1;
   }
 
-.popup__picture-container {
+.popup__container {
   position: relative;
+  width: 70%;
+  min-height: 70%;
+  background-color: #202020;
 }
 
 .popup__close-button {
@@ -31,7 +34,7 @@
   cursor: pointer;
   width: 32px;
   height: 32px;
-  background-image: url(../../images/Close-Button.svg);
+  background-image: url(../../images/Popup-Close-Button.svg);
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
