--- a/src/components/FilmInfoPopup/FilmInfoPopup.css
+++ b/src/components/FilmInfoPopup/FilmInfoPopup.css
@@ -20,10 +20,47 @@
 
 .popup__container {
   position: relative;
-  width: 70%;
-  min-height: 70%;
+  width: 60%;
+  min-height: 60%;
   background-color: #202020;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+    "media data"
+    "description description"
 }
+
+.popup__media {
+  grid-area: media;
+  display: flex;
+  flex-direction: column;
+}
+
+.popup__poster {
+
+}
+
+.popup__trailer {
+  
+}
+
+.popup__data {
+  grid-area: data;
+  display: flex;
+  flex-direction: column;
+}
+
+.poup__description {
+  grid-area: description;
+  margin: 0;
+  padding: 0;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 
 .popup__close-button {
   padding: 0;
