--- a/src/components/FilmInfoPopup/FilmInfoPopup.css
+++ b/src/components/FilmInfoPopup/FilmInfoPopup.css
@@ -55,16 +55,23 @@
   margin: 20px 0;
   padding: 0;
   border-radius: 48px;
-  background-color: #bfccc5;
+  background-color: #303030;
   width: 111px;
   height: 34px;
   background-repeat: no-repeat;
   background-position: bottom 50% right 50%;
-  border: #FFFFFF;
+  border: 1px solid #8B8B8B;
+  color: #8B8B8B;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+.popup__button_active {
+  color: #FFFFFF;
+  background-color: #3DDC84;
+  border: 0;
 }
 
 .popup__data {
